syntax = "proto3";

option csharp_namespace = "IntelliCook.RecipeSearch.Client";

message SearchRecipesRequest {
    string username = 1;
    repeated string ingredients = 2;
    optional uint32 page = 3;
    optional uint32 per_page = 4;
    optional bool include_detail = 5;
}

message SearchRecipesResponse {
    repeated SearchRecipesRecipe recipes = 1;
}

message SearchRecipesRecipe {
    int32 id = 1;
    string name = 2;
    repeated string ingredients = 3;
    repeated SearchRecipesMatch matches = 4;
    optional SearchRecipesRecipeDetail detail = 5;
}

enum SearchRecipesMatchField {
    NAME = 0;
    INGREDIENTS = 1;
}

message SearchRecipesMatch {
    SearchRecipesMatchField field = 1;
    repeated string tokens = 2;
    optional int32 index = 3;
}

message SearchRecipesRecipeDetail {
    repeated string instructions = 1;
    string raw = 2;
}